<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_PMPS" Id="{44b61d96-5303-46af-ae15-c93941a18a66}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'pytmc' := 'pv: PLC:RIX:OPTICS:ARB'}
    fbArbiter: FB_Arbiter(1);
    {attribute 'pytmc' := 'pv: PLC:RIX:OPTICS:FFO:01'}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 1^Output'}
    fbFastFaultOutput1: FB_HardwareFFOutput := (bAutoReset := TRUE);
    {attribute 'pytmc' := 'pv: PLCRIX:OPTICS:FFO:02'}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 2^Output'}
    fbFastFaultOutput2: FB_HardwareFFOutput := (bAutoReset := TRUE);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>